load("@rules_foreign_cc//tools/build_defs:make.bzl", "make")

make(
  name = "botan",
  lib_source = "@botan//:all",
  make_commands = [
    "python configure.py " +
      "--prefix=$INSTALLDIR " +
      "--without-documentation " +
      "--disable-shared-library " +
      "--with-build-dir=$EXT_BUILD_ROOT/external/botan " +
      "--no-install-python-module " +
      "--build-targets=static",

    "make -j8 -C $EXT_BUILD_ROOT/external/botan",

    "make -C $EXT_BUILD_ROOT/external/botan install PREFIX=$INSTALLDIR",
  ],
  static_libraries = ["libbotan-2.a"],
)
