load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library", "cc_grpc_library")
# load("@rules_grpc//grpc:defs.bzl", "grpc_proto_library")

# grpc_proto_library(
#   name = "greeter_service",
#   srcs = ["greeter_server.proto"],
# )

proto_library(
  name = "greeter_service_proto",
  srcs = ["greeter_service.proto"],
)

cc_proto_library(
  name = "greeter_service_cc_proto",
  deps = [":greeter_service_proto"],
)

cc_grpc_library(
  name = "greeter_service_cc_grpc",
  grpc_only = True,
  srcs = [":greeter_service_proto"],
  deps = [":greeter_service_cc_proto"],
)
