load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "base",
    hdrs = ["base.h"],
    visibility = ["//visibility:public"],
    deps = [":init"],
)

cc_library(
    name = "concepts",
    hdrs = ["concepts.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "init",
    srcs = ["init.cpp"],
    hdrs = ["init.h"],
    deps = [
        "//lw/err",
        "//lw/flags",
    ],
)

cc_test(
    name = "init_test",
    srcs = ["init_test.cpp"],
    deps = [
        ":init",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "strings",
    hdrs = ["strings.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//lw/err",
    ],
)

cc_test(
    name = "strings_test",
    srcs = ["strings_test.cpp"],
    deps = [
        ":strings",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "tuple",
    hdrs = ["tuple.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tuple_test",
    srcs = ["tuple_test.cc"],
    deps = [
        ":tuple",
        "@googletest//:gtest_main",
    ],
)
