load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test", "cc_binary")

cc_library(
  name = "color",
  hdrs = ["color.h"],
)

cc_library(
  name = "input",
  hdrs = ["input.h"],
)

cc_binary(
  name = "renderer",
  srcs = ["renderer.cpp"],
  deps = [
    ":color",
    ":input",
    "//lw/base:host_info",
    "//lw/err",
    "//lw/err:system",
  ],
)
