load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test", "cc_binary")

cc_library(
  name = "color",
  hdrs = ["color.h"],
)

cc_library(
  name = "image",
  hdrs = ["image.h"],
  deps = [
    ":color",
  ],
)

cc_library(
  name = "input",
  hdrs = ["input.h"],
)

cc_binary(
  name = "renderer",
  srcs = ["renderer.cpp"],
  deps = [
    ":color",
    ":image",
    ":input",
    ":terminal",
    "//lw/base:host_info",
    "//lw/err",
    "//lw/err:system",
  ],
)

cc_library(
  name = "terminal",
  hdrs = ["terminal.h"],
  srcs = ["terminal.cpp"],
  deps = [
    ":color",
    ":image",
    ":input",
    "//lw/err",
    "//lw/err:system",
  ],
)
