
cc_library(
  name = "concepts",
  hdrs = ["concepts.h"],
)

cc_library(
  name = "events",
  hdrs = ["events.h"],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "future",
  hdrs = ["future.h"],
  visibility = ["//visibility:public"],
)

cc_test(
  name = "future_test",
  srcs = ["future_test.cpp"],
  deps = [
    ":future",
    "@gtest//:gtest_main",
    "//lw/err",
  ],
)

cc_library(
  name = "generator",
  hdrs = ["generator.h"],
  visibility = ["//visibility:public"],
)

cc_test(
  name = "generator_test",
  srcs = ["generator_test.cpp"],
  deps = [
    ":generator",
    "@gtest//:gtest_main",
  ],
)

cc_library(
  name = "scheduler",
  hdrs = ["scheduler.h"],
  srcs = ["scheduler.cpp"],
  deps = [
    ":concepts",
    ":events",
    "//lw/co/systems:epoll"
  ],
)

cc_test(
  name = "scheduler_test",
  srcs = ["scheduler_test.cpp"],
  deps = [
    ":events",
    ":scheduler",
    "@gtest//:gtest_main",
    "//lw/co/testing:destroy_scheduler",
  ],
)

cc_library(
  name = "sequences",
  hdrs = ["sequences.h"],
  visibility = ["//visibility:public"],
  deps = [":generator"],
)

cc_test(
  name = "sequences_test",
  srcs = ["sequences_test.cpp"],
  deps = [
    ":sequences",
    "@gtest//:gtest_main",
  ],
)

cc_library(
  name = "task",
  hdrs = ["task.h"],
  visibility = ["//visibility:public"],
  deps = [
    "//lw/err",
  ],
)

cc_test(
  name = "task_test",
  srcs = ["task_test.cpp"],
  deps = [
    ":task",
    "@gtest//:gtest_main",
  ],
)

cc_library(
  name = "time",
  hdrs = ["time.h"],
  visibility = ["//visibility:public"],
  deps = [
    ":task",
  ],
)

cc_test(
  name = "time_test",
  srcs = ["time_test.cpp"],
  deps = [
    ":task",
    ":time",
    "@gtest//:gtest_main",
  ],
)
