load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
  name = "await",
  hdrs = ["await.h"],
  visibility = ["//visibility:public"],
  deps = [
    ":scheduler",
    ":task",
  ],
)

cc_library(
  name = "concepts",
  hdrs = ["concepts.h"],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "event_system",
  hdrs = ["event_system.h"],
  visibility = ["//visibility:public"],
  deps = [":events"],
)

cc_library(
  name = "events",
  hdrs = ["events.h"],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "future",
  hdrs = ["future.h"],
  visibility = ["//visibility:public"],
  deps = [
    ":scheduler",
    "//lw/err",
  ],
)

cc_test(
  name = "future_test",
  srcs = ["future_test.cpp"],
  deps = [
    ":future",
    ":scheduler",
    ":task",
    "@gtest//:gtest_main",
    "//lw/co/testing:destroy_scheduler",
    "//lw/err",
  ],
)

cc_library(
  name = "generator",
  hdrs = ["generator.h"],
  visibility = ["//visibility:public"],
  deps = [
    ":future",
  ],
)

cc_test(
  name = "generator_test",
  srcs = ["generator_test.cpp"],
  deps = [
    ":generator",
    ":future",
    ":scheduler",
    ":task",
    "@gtest//:gtest_main",
    "//lw/co/testing:destroy_scheduler",
  ],
)

cc_library(
  name = "scheduler",
  hdrs = ["scheduler.h"],
  srcs = ["scheduler.cpp"] + select({
    "//lw/co/systems:use_grpc": ["scheduler_grpc.cpp"],
    "//lw/co/systems:use_epoll": ["scheduler_epoll.cpp"],
  }),
  visibility = ["//visibility:public"],
  deps = [
    ":concepts",
    ":event_system",
    ":events",
    "//lw/err",
    "//lw/flags",
    "//lw/memory:circular_queue",
  ] + select({
    "//lw/co/systems:use_grpc": ["//lw/co/systems:grpc_event_system"],
    "//lw/co/systems:use_epoll": ["//lw/co/systems:epoll"],
  }),
)

cc_test(
  name = "scheduler_test",
  srcs = ["scheduler_test.cpp"],
  deps = [
    ":events",
    ":scheduler",
    ":task",
    "@gtest//:gtest_main",
    "//lw/co/testing:destroy_scheduler",
  ],
)

cc_library(
  name = "sequences",
  hdrs = ["sequences.h"],
  visibility = ["//visibility:public"],
  deps = [":generator"],
)

cc_test(
  name = "sequences_test",
  srcs = ["sequences_test.cpp"],
  deps = [
    ":sequences",
    "@gtest//:gtest_main",
  ],
)

cc_library(
  name = "task",
  hdrs = ["task.h"],
  visibility = ["//visibility:public"],
  deps = ["//lw/err"],
)

cc_test(
  name = "task_test",
  srcs = ["task_test.cpp"],
  deps = [
    ":task",
    "@gtest//:gtest_main",
  ],
)

cc_library(
  name = "time",
  hdrs = ["time.h"],
  srcs = ["time.cpp"],
  visibility = ["//visibility:public"],
  deps = [
    ":scheduler",
    ":task",
  ],
)

cc_test(
  name = "time_test",
  srcs = ["time_test.cpp"],
  deps = [
    ":scheduler",
    ":task",
    ":time",
    "@gtest//:gtest_main",
  ],
)
