load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "await",
    hdrs = ["await.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":scheduler",
        ":task",
    ],
)

cc_library(
    name = "concepts",
    hdrs = ["concepts.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "events",
    hdrs = ["events.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "future",
    hdrs = ["future.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":scheduler",
        "//lw/err",
    ],
)

cc_test(
    name = "future_test",
    srcs = ["future_test.cpp"],
    deps = [
        ":future",
        ":scheduler",
        ":task",
        "//lw/co/testing:destroy_scheduler",
        "//lw/err",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "generator",
    hdrs = ["generator.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":future",
    ],
)

cc_test(
    name = "generator_test",
    srcs = ["generator_test.cpp"],
    deps = [
        ":future",
        ":generator",
        ":scheduler",
        ":task",
        "//lw/co/testing:destroy_scheduler",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "scheduler",
    srcs = ["scheduler.cpp"],
    hdrs = ["scheduler.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":concepts",
        ":events",
        ":task",
        "//lw/co/systems:epoll",
        "//lw/err",
        "//lw/flags",
        "//lw/memory:circular_queue",
    ],
)

cc_test(
    name = "scheduler_test",
    srcs = ["scheduler_test.cpp"],
    deps = [
        ":events",
        ":scheduler",
        ":task",
        "//lw/co/testing:destroy_scheduler",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "sequences",
    hdrs = ["sequences.h"],
    visibility = ["//visibility:public"],
    deps = [":generator"],
)

cc_test(
    name = "sequences_test",
    srcs = ["sequences_test.cpp"],
    deps = [
        ":sequences",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "task",
    hdrs = ["task.h"],
    visibility = ["//visibility:public"],
    deps = ["//lw/err"],
)

cc_test(
    name = "task_test",
    srcs = ["task_test.cpp"],
    deps = [
        ":task",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "time",
    srcs = ["time.cpp"],
    hdrs = ["time.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":scheduler",
        ":task",
    ],
)

cc_test(
    name = "time_test",
    srcs = ["time_test.cpp"],
    deps = [
        ":scheduler",
        ":task",
        ":time",
        "@googletest//:gtest_main",
    ],
)
