cc_library(
    name = "err",
    hdrs = [
        "canonical.h",
        "macros.h",
    ],
    visibility = ["//visibility:public"],
    deps = [":error"],
)

cc_test(
    name = "err_test",
    srcs = ["macros_test.cpp"],
    deps = [
        ":err",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "error",
    srcs = ["error.cpp"],
    hdrs = ["error.h"],
    deps = [
        "//lw/io/stream:buffer",
    ],
)

cc_test(
    name = "error_test",
    srcs = ["error_test.cpp"],
    deps = [
        ":error",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "system",
    srcs = ["system.cpp"],
    hdrs = ["system.h"],
    visibility = ["//visibility:public"],
    deps = [":err"],
)
