load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "blobs",
    srcs = ["blobs.cpp"],
    hdrs = ["blobs.h"],
    visibility = ["//visibility:public"],
    deps = ["//lw/memory:buffer_view"],
)

cc_test(
    name = "blobs_test",
    srcs = ["blobs_test.cpp"],
    deps = [
        ":blobs",
        "@googletest//:gtest_main",
    ],
)
