load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "headers",
    hdrs = ["headers.h"],
    visibility = ["//lw/http:__subpackages__"],
    deps = ["//lw/base:strings"],
)

cc_library(
    name = "http",
    srcs = ["http.cpp"],
    hdrs = ["http.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":http_handler",
        "//lw/base:strings",
        "//lw/co:future",
        "//lw/err",
        "//lw/http/internal:http_mount_path",
        "//lw/log",
        "//lw/net:router",
    ],
)

cc_test(
    name = "http_test",
    srcs = ["http_test.cpp"],
    deps = [
        ":http",
        ":http_handler",
        "//lw/co:scheduler",
        "//lw/io/co/testing:string_stream",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "http_handler",
    srcs = ["http_handler.cpp"],
    hdrs = ["http_handler.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":http_request",
        ":http_response",
        "//lw/co:future",
    ],
)

cc_library(
    name = "http_request",
    srcs = ["http_request.cpp"],
    hdrs = ["http_request.h"],
    deps = [
        ":headers",
        "//lw/co:future",
        "//lw/err",
        "//lw/io/co",
    ],
)

cc_test(
    name = "http_request_test",
    srcs = ["http_request_test.cpp"],
    deps = [
        ":http_request",
        "//lw/co:scheduler",
        "//lw/co:task",
        "//lw/io/co/testing:string_reader",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "http_response",
    srcs = ["http_response.cpp"],
    hdrs = ["http_response.h"],
    deps = [
        ":headers",
        "//lw/memory:buffer",
    ],
)

cc_test(
    name = "http_response_test",
    srcs = ["http_response_test.cpp"],
    deps = [
        ":http_response",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "https",
    hdrs = ["https.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":http",
        "//lw/net:tls_router",
    ],
)

cc_test(
    name = "https_test",
    srcs = ["https_test.cpp"],
    deps = [
        ":http",
        ":https",
        "//lw/io/co/testing:string_connection",
        "//lw/net:tls",
        "//lw/net:tls_options",
        "//lw/net/testing:tls_credentials",
        "@googletest//:gtest_main",
    ],
)
