load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
  name = "log",
  hdrs = ["log.h"],
  srcs = ["log.cpp"],
  visibility = ["//visibility:public"],
  deps = ["//lw/flags"],
)

cc_test(
  name = "log_test",
  srcs = ["log_test.cpp"],
  deps = [
    ":log",
    "@gtest//:gtest_main",
    "//lw/flags",
  ],
)
