load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
  name = "buffer",
  visibility = ["//visibility:public"],
  hdrs = ["buffer.h"],
  srcs = ["buffer.cpp"],
  deps = [
    "//lw/err",
  ]
)

cc_test(
  name = "buffer_test",
  srcs = ["buffer_test.cpp"],
  deps = [
    ":buffer",
    "@gtest//:gtest_main",
  ]
)

cc_library(
  name = "buffer_view",
  visibility = ["//visibility:public"],
  hdrs = ["buffer_view.h"],
  deps = [":buffer"],
)

cc_library(
  name = "circular_queue",
  visibility = ["//visibility:public"],
  hdrs = ["circular_queue.h"],
  deps = [
    "//lw/err",
  ],
)

cc_test(
  name = "circular_queue_test",
  srcs = ["circular_queue_test.cpp"],
  deps = [
    ":circular_queue",
    "@gtest//:gtest_main",
    "//lw/err",
  ],
)
