load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "buffer",
    srcs = ["buffer.cpp"],
    hdrs = ["buffer.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//lw/err",
    ],
)

cc_test(
    name = "buffer_test",
    srcs = ["buffer_test.cpp"],
    deps = [
        ":buffer",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "buffer_view",
    hdrs = ["buffer_view.h"],
    visibility = ["//visibility:public"],
    deps = [":buffer"],
)

cc_library(
    name = "circular_queue",
    hdrs = ["circular_queue.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//lw/err",
    ],
)

cc_test(
    name = "circular_queue_test",
    srcs = ["circular_queue_test.cpp"],
    deps = [
        ":circular_queue",
        "//lw/err",
        "@googletest//:gtest_main",
    ],
)
