load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "router",
    srcs = ["router.cpp"],
    hdrs = ["router.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//lw/co:task",
        "//lw/err",
        "//lw/io/co",
    ],
)

cc_test(
    name = "router_test",
    srcs = ["router_test.cpp"],
    deps = [
        ":router",
        "//lw/co:task",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "server_resource",
    srcs = ["server_resource.cpp"],
    hdrs = ["server_resource.h"],
    deps = [
        "//lw/base:tuple",
        "//lw/co:future",
        "//lw/err",
    ],
)

cc_test(
    name = "server_resource_test",
    srcs = ["server_resource_test.cpp"],
    deps = [
        ":server_resource",
        "//lw/co:future",
        "//lw/co:scheduler",
        "//lw/co:task",
        "//lw/co/testing:destroy_scheduler",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "server",
    srcs = ["server.cpp"],
    hdrs = ["server.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":router",
        ":socket",
        "//lw/co:scheduler",
        "//lw/co:task",
        "//lw/err",
    ],
)

cc_test(
    name = "server_test",
    srcs = ["server_test.cpp"],
    deps = [
        ":router",
        ":server",
        ":socket",
        "//lw/co:scheduler",
        "//lw/co:task",
        "//lw/co/testing:destroy_scheduler",
        "//lw/io/co",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "socket",
    srcs = ["socket.cpp"],
    hdrs = ["socket.h"],
    deps = [
        "//lw/co:future",
        "//lw/co:scheduler",
        "//lw/err",
        "//lw/err:system",
        "//lw/flags",
        "//lw/io/co",
        "//lw/memory:buffer",
    ],
)

cc_test(
    name = "socket_test",
    srcs = ["socket_test.cpp"],
    deps = [
        ":socket",
        "//lw/co:scheduler",
        "//lw/co:time",
        "//lw/co/testing:destroy_scheduler",
        "//lw/err",
        "//lw/memory:buffer",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "tls_options",
    hdrs = ["tls_options.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "tls_router",
    srcs = ["tls_router.cpp"],
    hdrs = ["tls_router.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":router",
        ":tls",
        ":tls_options",
        "//lw/co:await",
        "//lw/co:future",
        "//lw/co:task",
        "//lw/log",
    ],
)

cc_test(
    name = "tls_router_test",
    srcs = ["tls_router_test.cpp"],
    deps = [
        ":tls_router",
        "//lw/co:scheduler",
        "//lw/co:task",
        "//lw/co/testing:destroy_scheduler",
        "//lw/io/co/testing:string_connection",
        "//lw/net/testing:mock_router",
        "//lw/net/testing:tls_credentials",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "tls",
    srcs = ["tls.cpp"],
    hdrs = ["tls.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":tls_options",
        "//lw/co:future",
        "//lw/flags",
        "//lw/io/co",
        "//lw/memory:buffer",
        "//lw/memory:buffer_view",
        "//lw/net/internal:tls_client",
        "//lw/net/internal:tls_context",
    ],
)

cc_test(
    name = "tls_test",
    srcs = ["tls_test.cpp"],
    data = ["//lw/net/testing:tls_credentials"],
    deps = [
        ":tls",
        ":tls_options",
        "//lw/co:scheduler",
        "//lw/co/testing:destroy_scheduler",
        "//lw/io/co/testing:string_connection",
        "//lw/io/co/testing:string_stream",
        "//lw/net/testing:tls_credentials",
        "@googletest//:gtest_main",
    ],
)
