# System-specific implementations of scheduling services. For use with the
# coroutine scheduler class only.
package(default_visibility = ["//lw/co:__subpackages__"])

cc_library(
    name = "epoll",
    srcs = ["epoll.cpp"],
    hdrs = ["epoll.h"],
    deps = [
        "//lw/co:events",
        "//lw/err",
        "//lw/err:system",
        "//lw/flags",
    ],
)

cc_test(
    name = "epoll_test",
    srcs = ["epoll_test.cpp"],
    deps = [
        ":epoll",
        "//lw/err",
        "@googletest//:gtest_main",
    ],
)
