load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
  name = "co",
  visibility = ["//visibility:public"],
  hdrs = ["co.h"],
  srcs = ["co.cpp"],
  deps = [
    ":concepts",
    "//lw/co:future",
    "//lw/err",
    "//lw/flags",
    "//lw/memory:buffer",
  ],
)

cc_test(
  name = "co_test",
  srcs = ["co_test.cpp"],
  deps = [
    ":co",
    "@gtest//:gtest_main",
    "//lw/co:scheduler",
    "//lw/co:task",
    "//lw/io/co/testing:string_readable",
  ]
)

cc_library(
  name = "concepts",
  visibility = ["//visibility:public"],
  hdrs = ["concepts.h"],
  deps = [
    "//lw/co:concepts",
    "//lw/memory:buffer",
  ],
)
